# mason-rs

./: .gitignore  Cargo.toml  Makefile  README.md  test.mason
.github/workflows/: ci.yml
src/: buf_buf_reader.rs  hex.rs  index.rs  lib.rs  main.rs  peek_reader.rs  tests.rs  unescape_string.rs  utils.rs  value.rs
src/deserialize/: mod.rs  whitespace.rs
src/deserialize/value/: array.rs  mod.rs  object.rs  string.rs
src/parser/: mod.rs  whitespace.rs
src/parser/value/: array.rs  mod.rs  number.rs  object.rs  string.rs
src/serde/: de.rs  error.rs  mod.rs  ser.rs
src/serialize/: mod.rs
src/value/: mod.rs  serde.rs
