[package]
name = "mason-rs"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "A rust implementation of MASON, a JSON-like object notation."
authors = ["Emilie Dørum <emilid2103@gmail.com>"]
repository = "https://github.com/Emilinya/mason-rs"
license = "MIT"

[dev-dependencies]
serde_json = "1.0.142"
base64 = "0.22.1"
