[package]
name = "mason-rs"
version = "0.3.0"
edition = "2024"
rust-version = "1.85.1"
description = "A rust implementation of MASON, a JSON-like object notation."
authors = ["Emilie Dørum <emilid2103@gmail.com>"]
repository = "https://github.com/Emilinya/mason-rs"
license = "MIT"

[dependencies]
serde = { version = "1.0.219", optional = true }
pastey = { version = "0.1.1", optional = true }

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
base64 = "0.22.1"

[features]
default = ["serde"]
serde = ["dep:serde", "dep:pastey"]
